Thu Dec 10 17:00:49 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/eval.c: fix matrix expansion.  After zeros were replaced
	  the expression [0,I(2);0,0] would not include the last row.  This
	  fixes AuxilliaryUnitMatrix and JordanBlock functions.

	* src/geniustests.txt: add some tests for matrix expansion and the
	  above functions

Tue Nov 10 00:30:53 2009  Jiri (George) Lebl <jirka@5z.com>

	* Release 1.0.8

Tue Nov 10 00:19:56 2009  Jiri (George) Lebl <jirka@5z.com>

	* configure.in: require gtk/glib 2.12

	* src/gnome-genius.c: use the "new" GtkTooltip api

	* src/eval.c: remove unused function

Mon Oct 19 15:59:28 2009  Jiri (George) Lebl <jirka@5z.com>

	Patches from: Yaakov (Cygwin/X) yselkowitz at users dot sourceforge
        dot net

	* configure.in: add EXEEXT to fix building on cygwin

	* ve/Makefile.am: Fix parallel builds

Sun Oct 18 20:05:43 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: check events before executing a command line.
	  VTE behaviour changed and we need to make sure the user carriage
	  return gets sent to screen before the execution.

Thu Sep 24 15:48:25 2009  Jiri (George) Lebl <jirka@5z.com>

	* help/C/genius.xml: some doc updates

Wed Jul 29 15:11:16 2009  Jiri (George) Lebl <jirka@5z.com>

	* Release 1.0.7

	* src/gnome-genius.c: set all toolbar items to important so
	  that text always shows.

Tue Jul 28 14:04:33 2009  Jiri (George) Lebl <jirka@5z.com>

	* NEWS: update,

	* help/C/gel-function-list.xml: add more docs on the root finding
	  functions.  There aren't very nice, but ...

	* lib/equation_solving/find_root.gel: use true/false for booleans
	  rather than 0/1

Mon Jul 27 15:22:57 2009  Jiri (George) Lebl <jirka@5z.com>

	* help/C/genius.xml, help/C/gel-function-list.xml: Update
	  documentation for all the new features and improve existing
	  parts a bit especially by adding a bunch of links for some
	  functions.

	* NEWS: update

Fri Jul 24 17:23:04 2009  Jiri (George) Lebl <jirka@5z.com>
