@@ -1,3 +1,7 @@
+Wed Dec 23 14:09:21 2009  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/graphing.c, src/util.c: fix use of strcpy
+
 Thu Dec 10 17:00:49 2009  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/eval.c: fix matrix expansion.  After zeros were replaced
